@@ -185,3 +185,12 @@ def copytree(source, dest):
         elif os.path.isdir(dest):
             shutil.rmtree(dest)
     shutil.copytree(source, dest)
+
+def linux_path(path):
+    #TBD not a proper conversion but will do for now
+    path = path.replace('\\', '/')
+    if path[1] == ':':
+        path = path[2:]
+    if path[-1] == '/':
+        path = path[:-1]
+    return path
